<resources>
    <string name="app_name">SimpleDayCome</string>
    <string name="action_settings">Settings</string>
    <string name="day">日付：</string>
    <string name="text_title">タイトル：</string>
    <string name="text_note">詳細：</string>
    <string name="text_save">保存</string>
    <string name="text_delete">削除</string>
    <string name="dayE">20180222</string>
    <string name="Title_default">入力してください</string>
    <string name="text_count">残り</string>
    <string name="text_day">日</string>
    <string name="no_day">00</string>
</resources>
